--- a/mototorque/templates/base.html
+++ b/mototorque/templates/base.html
@@ -16,7 +16,29 @@
     <title>Moto Torque</title>
   </head>
   <body>
-    Hello World!
+    <nav>
+      <!-- top navbar -->
+      <div class="nav-wrapper">
+        <a href="#!" class="brand-logo">Logo</a>
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"
+          ><i class="material-icons">menu</i></a
+        >
+        <ul class="right hide-on-med-and-down">
+          <li><a href="#">Sass</a></li>
+          <li><a href="#">Components</a></li>
+          <li><a href="#">Javascript</a></li>
+          <li><a href="#">Mobile</a></li>
+        </ul>
+      </div>
+    </nav>
+    <!-- mobile sidenav -->
+    <ul class="sidenav" id="mobile-demo">
+      <li><a href="#">Sass</a></li>
+      <li><a href="#">Components</a></li>
+      <li><a href="#">Javascript</a></li>
+      <li><a href="#">Mobile</a></li>
+    </ul>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
   </body>
