--- a/mototorque/templates/base.html
+++ b/mototorque/templates/base.html
@@ -8,36 +8,58 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,600;1,400&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/style.css') }}"
       type="text/css"
     />
+    <script
+      src="https://kit.fontawesome.com/36ab48d395.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Moto Torque</title>
   </head>
   <body>
-    <nav>
-      <!-- top navbar -->
-      <div class="nav-wrapper">
-        <a href="#!" class="brand-logo">Logo</a>
-        <a href="#" data-target="mobile-demo" class="sidenav-trigger"
-          ><i class="material-icons">menu</i></a
-        >
-        <ul class="right hide-on-med-and-down">
-          <li><a href="#">Sass</a></li>
-          <li><a href="#">Components</a></li>
-          <li><a href="#">Javascript</a></li>
-          <li><a href="#">Mobile</a></li>
-        </ul>
+    <header>
+      <nav>
+        <!-- top navbar -->
+        <div class="nav-wrapper blue-grey darken-3">
+          <a href="#!" class="brand-logo left"
+            ><i class="fa-solid fa-motorcycle"></i>Moto Torque</a
+          >
+          <a href="#" data-target="mobile-demo" class="sidenav-trigger right"
+            ><i class="fa-solid fa-bars"></i
+          ></a>
+          <ul class="right hide-on-med-and-down">
+            <li><a href="#">Sass</a></li>
+            <li><a href="#">Components</a></li>
+            <li><a href="#">Javascript</a></li>
+            <li><a href="#">Mobile</a></li>
+          </ul>
+        </div>
+      </nav>
+      <!-- mobile sidenav -->
+      <ul class="sidenav" id="mobile-demo">
+        <li><a href="#">Sass</a></li>
+        <li><a href="#">Components</a></li>
+        <li><a href="#">Javascript</a></li>
+        <li><a href="#">Mobile</a></li>
+      </ul>
+    </header>
+
+    <main></main>
+
+    <footer class="page-footer blue-grey darken-3">
+      <div class="footer-copyright">
+        <div class="container right-align">© 2023 CLawrence</div>
       </div>
-    </nav>
-    <!-- mobile sidenav -->
-    <ul class="sidenav" id="mobile-demo">
-      <li><a href="#">Sass</a></li>
-      <li><a href="#">Components</a></li>
-      <li><a href="#">Javascript</a></li>
-      <li><a href="#">Mobile</a></li>
-    </ul>
+    </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
