--- a/mototorque/templates/base.html
+++ b/mototorque/templates/base.html
@@ -37,23 +37,113 @@
             ><i class="fa-solid fa-bars"></i
           ></a>
           <ul class="right hide-on-med-and-down">
-            <li><a href="#">Sass</a></li>
-            <li><a href="#">Components</a></li>
-            <li><a href="#">Javascript</a></li>
-            <li><a href="#">Mobile</a></li>
+            <li>
+              <a
+                class="waves-effect waves-light btn modal-trigger"
+                href="#browse_modal"
+                >Browse</a
+              >
+            </li>
+            <li>
+              <a href="#" class="waves-effect waves-light btn add_link"
+                >Add +</a
+              >
+            </li>
+            <li><a href="#">Login</a></li>
+            <li><a href="#">Logout</a></li>
+            <li>
+              <a href="#" class="waves-effect waves-light btn sign_link"
+                >Sign Up!</a
+              >
+            </li>
           </ul>
         </div>
       </nav>
       <!-- mobile sidenav -->
       <ul class="sidenav" id="mobile-demo">
-        <li><a href="#">Sass</a></li>
-        <li><a href="#">Components</a></li>
-        <li><a href="#">Javascript</a></li>
-        <li><a href="#">Mobile</a></li>
+        <li>
+          <a
+            class="waves-effect waves-light btn modal-trigger"
+            href="#browse_modal"
+            >Browse</a
+          >
+        </li>
+        <li>
+          <a href="#" class="waves-effect waves-light btn add_link">Add +</a>
+        </li>
+        <li><a href="#">Login</a></li>
+        <li><a href="#">Logout</a></li>
+        <li>
+          <a href="#" class="waves-effect waves-light btn sign_link"
+            >Sign Up!</a
+          >
+        </li>
       </ul>
     </header>
 
     <main></main>
+
+    <!-- Browse Modal Structure -->
+    <div id="browse_modal" class="modal">
+      <div class="modal-content">
+        <h4>Browse</h4>
+        <table>
+          <tr>
+            <td><a href="#">A</a></td>
+            <td><a href="#">B</a></td>
+            <td><a href="#">C</a></td>
+            <td><a href="#">D</a></td>
+            <td><a href="#">E</a></td>
+            <td><a href="#">F</a></td>
+            <td><a href="#">G</a></td>
+          </tr>
+          <tr>
+            <td><a href="#">H</a></td>
+            <td><a href="#">I</a></td>
+            <td><a href="#">J</a></td>
+            <td><a href="#">K</a></td>
+            <td><a href="#">L</a></td>
+            <td><a href="#">M</a></td>
+            <td><a href="#">N</a></td>
+          </tr>
+          <tr>
+            <td><a href="#">O</a></td>
+            <td><a href="#">P</a></td>
+            <td><a href="#">Q</a></td>
+            <td><a href="#">R</a></td>
+            <td><a href="#">S</a></td>
+            <td><a href="#">T</a></td>
+            <td><a href="#">U</a></td>
+          </tr>
+          <tr>
+            <td><a href="#">V</a></td>
+            <td><a href="#">W</a></td>
+            <td><a href="#">X</a></td>
+            <td><a href="#">Y</a></td>
+            <td><a href="#">Z</a></td>
+          </tr>
+          <tr>
+            <td><a href="#">0</a></td>
+            <td><a href="#">1</a></td>
+            <td><a href="#">2</a></td>
+            <td><a href="#">3</a></td>
+            <td><a href="#">4</a></td>
+          </tr>
+          <tr>
+            <td><a href="#">5</a></td>
+            <td><a href="#">6</a></td>
+            <td><a href="#">7</a></td>
+            <td><a href="#">8</a></td>
+            <td><a href="#">9</a></td>
+          </tr>
+        </table>
+      </div>
+      <div class="modal-footer">
+        <a href="#!" class="modal-close waves-effect waves-green btn-flat"
+          >Close</a
+        >
+      </div>
+    </div>
 
     <footer class="page-footer blue-grey darken-3">
       <div class="footer-copyright">
