added index.html, currently not rendering

--- a/mototorque/templates/base.html
+++ b/mototorque/templates/base.html
@@ -30,7 +30,7 @@
       <nav>
         <!-- top navbar -->
         <div class="nav-wrapper blue-grey darken-3">
-          <a href="#!" class="brand-logo left"
+          <a href="{{ url_for('home') }}" class="brand-logo left"
             ><i class="fa-solid fa-motorcycle"></i>Moto Torque</a
           >
           <a href="#" data-target="mobile-demo" class="sidenav-trigger right"
