fixed error with tem plate inheritance

--- a/mototorque/templates/base.html
+++ b/mototorque/templates/base.html
@@ -81,7 +81,7 @@
       </ul>
     </header>
 
-    <main></main>
+    <main class="container">{% block content %} {% endblock %}</main>
 
     <!-- Browse Modal Structure -->
     <div id="browse_modal" class="modal">
