--- a/mototorque/templates/index.html
+++ b/mototorque/templates/index.html
@@ -4,7 +4,7 @@
   <div class="col s12 m6">
     <div class="card blue-grey darken-3">
       <div class="card-content white-text">
-        <span class="card-title">Card Title</span>
+        <span class="card-title">Welcome!</span>
         <p>
           Welcome to Moto Torque! An online lexicon for motorcycle words and
           phrases added and defined by you. Feel free to browse the ever growing
