--- a/mototorque/templates/index.html
+++ b/mototorque/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% block content %}
 
 <div class="row">
-  <div class="col s12 m6">
+  <div class="col s12">
     <div class="card blue-grey darken-3">
       <div class="card-content white-text">
         <span class="card-title">Welcome!</span>
@@ -12,8 +12,7 @@
         </p>
       </div>
       <div class="card-action">
-        <a href="#">This is a link</a>
-        <a href="#">This is a link</a>
+        <a href="#" class="waves-effect waves-light btn sign_link">Sign Up!</a>
       </div>
     </div>
   </div>
