--- a/mototorque/templates/index.html
+++ b/mototorque/templates/index.html
@@ -8,7 +8,8 @@
         <p>
           Welcome to Moto Torque! An online lexicon for motorcycle words and
           phrases added and defined by you. Feel free to browse the ever growing
-          collection. If you would like to contribute please sign up!
+          collection. <br /><br />
+          If you would like to contribute please sign up!
         </p>
       </div>
       <div class="card-action">
