gave inputs max length and made them required

--- a/mototorque/templates/add.html
+++ b/mototorque/templates/add.html
@@ -9,19 +9,37 @@
           <form class="col s12">
             <div class="row">
               <div class="input-field col s12">
-                <input id="word_phrase" type="text" class="validate" />
+                <input
+                  id="word_phrase"
+                  type="text"
+                  maxlength="100"
+                  class="validate"
+                  required
+                />
                 <label for="word_phrase">Word or phrase</label>
               </div>
             </div>
             <div class="row">
               <div class="input-field col s12">
-                <input id="definition" type="text" class="validate" />
+                <input
+                  id="definition"
+                  type="text"
+                  maxlength="200"
+                  class="validate"
+                  required
+                />
                 <label for="definition">Definition</label>
               </div>
             </div>
             <div class="row">
               <div class="input-field col s12">
-                <input id="example" type="text" class="validate" />
+                <input
+                  id="example"
+                  type="text"
+                  maxlength="100"
+                  class="validate"
+                  required
+                />
                 <label for="example">Example</label>
               </div>
             </div>
