--- a/mototorque/templates/base.html
+++ b/mototorque/templates/base.html
@@ -95,52 +95,52 @@
         <h4>Browse</h4>
         <table>
           <tr>
-            <td><a href="#">A</a></td>
-            <td><a href="#">B</a></td>
-            <td><a href="#">C</a></td>
-            <td><a href="#">D</a></td>
-            <td><a href="#">E</a></td>
-            <td><a href="#">F</a></td>
-            <td><a href="#">G</a></td>
+            <td><a href="{{url_for('browse', type='A')}}">A</a></td>
+            <td><a href="{{url_for('browse', type='B')}}">B</a></td>
+            <td><a href="{{url_for('browse', type='C')}}">C</a></td>
+            <td><a href="{{url_for('browse', type='D')}}">D</a></td>
+            <td><a href="{{url_for('browse', type='E')}}">E</a></td>
+            <td><a href="{{url_for('browse', type='F')}}">F</a></td>
+            <td><a href="{{url_for('browse', type='G')}}">G</a></td>
           </tr>
           <tr>
-            <td><a href="#">H</a></td>
-            <td><a href="#">I</a></td>
-            <td><a href="#">J</a></td>
-            <td><a href="#">K</a></td>
-            <td><a href="#">L</a></td>
-            <td><a href="#">M</a></td>
-            <td><a href="#">N</a></td>
+            <td><a href="{{url_for('browse', type='H')}}">H</a></td>
+            <td><a href="{{url_for('browse', type='I')}}">I</a></td>
+            <td><a href="{{url_for('browse', type='J')}}">J</a></td>
+            <td><a href="{{url_for('browse', type='K')}}">K</a></td>
+            <td><a href="{{url_for('browse', type='L')}}">L</a></td>
+            <td><a href="{{url_for('browse', type='M')}}">M</a></td>
+            <td><a href="{{url_for('browse', type='N')}}">N</a></td>
           </tr>
           <tr>
-            <td><a href="#">O</a></td>
-            <td><a href="#">P</a></td>
-            <td><a href="#">Q</a></td>
-            <td><a href="#">R</a></td>
-            <td><a href="#">S</a></td>
-            <td><a href="#">T</a></td>
-            <td><a href="#">U</a></td>
+            <td><a href="{{url_for('browse', type='O')}}">O</a></td>
+            <td><a href="{{url_for('browse', type='P')}}">P</a></td>
+            <td><a href="{{url_for('browse', type='Q')}}">Q</a></td>
+            <td><a href="{{url_for('browse', type='R')}}">R</a></td>
+            <td><a href="{{url_for('browse', type='S')}}">S</a></td>
+            <td><a href="{{url_for('browse', type='T')}}">T</a></td>
+            <td><a href="{{url_for('browse', type='U')}}">U</a></td>
           </tr>
           <tr>
-            <td><a href="#">V</a></td>
-            <td><a href="#">W</a></td>
-            <td><a href="#">X</a></td>
-            <td><a href="#">Y</a></td>
-            <td><a href="#">Z</a></td>
+            <td><a href="{{url_for('browse', type='V')}}">V</a></td>
+            <td><a href="{{url_for('browse', type='W')}}">W</a></td>
+            <td><a href="{{url_for('browse', type='X')}}">X</a></td>
+            <td><a href="{{url_for('browse', type='Y')}}">Y</a></td>
+            <td><a href="{{url_for('browse', type='Z')}}">Z</a></td>
           </tr>
           <tr>
-            <td><a href="#">0</a></td>
-            <td><a href="#">1</a></td>
-            <td><a href="#">2</a></td>
-            <td><a href="#">3</a></td>
-            <td><a href="#">4</a></td>
+            <td><a href="{{url_for('browse', type='0')}}">0</a></td>
+            <td><a href="{{url_for('browse', type='1')}}">1</a></td>
+            <td><a href="{{url_for('browse', type='2')}}">2</a></td>
+            <td><a href="{{url_for('browse', type='3')}}">3</a></td>
+            <td><a href="{{url_for('browse', type='4')}}">4</a></td>
           </tr>
           <tr>
-            <td><a href="#">5</a></td>
-            <td><a href="#">6</a></td>
-            <td><a href="#">7</a></td>
-            <td><a href="#">8</a></td>
-            <td><a href="#">9</a></td>
+            <td><a href="{{url_for('browse', type='5')}}">5</a></td>
+            <td><a href="{{url_for('browse', type='6')}}">6</a></td>
+            <td><a href="{{url_for('browse', type='7')}}">7</a></td>
+            <td><a href="{{url_for('browse', type='8')}}">8</a></td>
+            <td><a href="{{url_for('browse', type='9')}}">9</a></td>
           </tr>
         </table>
       </div>
