--- a/mototorque/templates/base.html
+++ b/mototorque/templates/base.html
@@ -46,7 +46,7 @@
             </li>
             <li>
               <a
-                href="{{ url_for('add') }}"
+                href="{{ url_for('add_word') }}"
                 class="waves-effect waves-light btn add_link"
                 >Add +</a
               >
@@ -72,7 +72,7 @@
         </li>
         <li>
           <a
-            href="{{ url_for('add') }}"
+            href="{{ url_for('add_word') }}"
             class="waves-effect waves-light btn add_link"
             >Add +</a
           >
