--- a/mototorque/templates/browse.html
+++ b/mototorque/templates/browse.html
@@ -2,14 +2,20 @@
 
 <div class="row">
   <div class="col s12">
+    <h3>{{ letter }}</h3>
+    {% for word in words %}
     <div class="card blue-grey darken-3">
       <div class="card-content white-text">
-        <span class="card-title">{{ letter }}</span>
+        <span class="card-title">{{ words.word_phrase }}</span>
+      </div>
+      <div>
+        <p>{{ words.definition }}</p>
       </div>
       <div class="card-action">
-        <a href="#" class="waves-effect waves-light btn sign_link">Sign Up!</a>
+        <p>{{ words.example }}</p>
       </div>
     </div>
+    {% endfor %}
   </div>
 </div>
 
