trying to get databases to work

--- a/mototorque/templates/add.html
+++ b/mototorque/templates/add.html
@@ -6,7 +6,11 @@
       <div class="card-content white-text">
         <span class="card-title">Add your word or phrase</span>
         <div class="row">
-          <form class="col s12">
+          <form
+            class="col s12"
+            method="POST"
+            action="{{ url_for('add_word') }}"
+          >
             <div class="row">
               <div class="input-field col s12">
                 <input
