added names to form inputs

--- a/mototorque/templates/add.html
+++ b/mototorque/templates/add.html
@@ -15,6 +15,8 @@
               <div class="input-field col s12">
                 <input
                   id="word_phrase"
+                  name="word_phrase"
+                  name="word_phrase"
                   type="text"
                   maxlength="100"
                   class="validate"
@@ -27,6 +29,8 @@
               <div class="input-field col s12">
                 <input
                   id="definition"
+                  name="definition"
+                  name="definition"
                   type="text"
                   maxlength="200"
                   class="validate"
@@ -39,6 +43,8 @@
               <div class="input-field col s12">
                 <input
                   id="example"
+                  name="example"
+                  name="example"
                   type="text"
                   maxlength="100"
                   class="validate"
