--- a/mototorque/templates/browse.html
+++ b/mototorque/templates/browse.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %} {% block content %}
 
 <div class="row">
-    {% for words in dictionary %}
+    {% for entry in entries %}
   <div class="col s12">
     <h3>{{ letter }}</h3>
     <div class="card blue-grey darken-3">
       <div class="card-content white-text">
-        <span class="card-title">{{ words.word_phrase }}/span>
+        <span class="card-title">{{ entry.word_phrase }}/span>
       </div>
       <div>
         <p>test</p>
