corrected for loop to show all entries to definition

--- a/mototorque/templates/base.html
+++ b/mototorque/templates/base.html
@@ -51,10 +51,12 @@
                 >Add +</a
               >
             </li>
-            <li><a href="#">Login</a></li>
+            <li><a href="{{ url_for('browse') }}">Login</a></li>
             <li><a href="#">Logout</a></li>
             <li>
-              <a href="#" class="waves-effect waves-light btn sign_link"
+              <a
+                href="{{ url_for('signup') }}"
+                class="waves-effect waves-light btn sign_link"
                 >Sign Up!</a
               >
             </li>
@@ -80,7 +82,9 @@
         <li><a href="#">Login</a></li>
         <li><a href="#">Logout</a></li>
         <li>
-          <a href="#" class="waves-effect waves-light btn sign_link"
+          <a
+            href="{{ url_for('signup') }}"
+            class="waves-effect waves-light btn sign_link"
             >Sign Up!</a
           >
         </li>
