--- a/mototorque/templates/browse.html
+++ b/mototorque/templates/browse.html
@@ -1,22 +1,23 @@
 {% extends "base.html" %} {% block content %}
 
 <div class="row">
-    {% for entry in entries %}
+  <h3>{{ letter }}</h3>
+  {% for ent in entry %}
   <div class="col s12">
-    <h3>{{ letter }}</h3>
     <div class="card blue-grey darken-3">
       <div class="card-content white-text">
-        <span class="card-title">{{ entry.word_phrase }}/span>
+        <span class="card-title">{{ ent.word_phrase }}</span>
       </div>
       <div>
-        <p>test</p>
+        <p>{{ ent.definition }}</p>
       </div>
-      <div class="card-action">
-        <p>test</p>
+      <div>
+        <p>{{ ent.example }}</p>
       </div>
+      <div class="card-action"></div>
     </div>
   </div>
-{% endfor %}
+  {% endfor %}
 </div>
 
 {% endblock %}
