--- a/mototorque/templates/browse.html
+++ b/mototorque/templates/browse.html
@@ -2,19 +2,27 @@
 
 <div class="row">
   <h3>{{ letter }}</h3>
-  {% for ent in entry %}
+  {% for word in words %}
   <div class="col s12">
     <div class="card blue-grey darken-3">
       <div class="card-content white-text">
-        <span class="card-title">{{ ent.word_phrase }}</span>
+        <span class="card-title">{{ word.word_phrase }}</span>
+        <p>{{ word.definition }}</p>
+        <br />
+        <p><em>{{ word.example }}</em></p>
       </div>
-      <div>
-        <p>{{ ent.definition }}</p>
+      <div class="card-action">
+        <a
+          href="{{ url_for('edit_word', word_id=word.id) }}"
+          class="btn waves-effect waves edit_link"
+          >Edit</a
+        >
+        <a
+          href="{{ url_for('delete_word', word_id=word.id) }}"
+          class="btn waves-effect waves-red delete_link"
+          >Delete</a
+        >
       </div>
-      <div>
-        <p>{{ ent.example }}</p>
-      </div>
-      <div class="card-action"></div>
     </div>
   </div>
   {% endfor %}
