Added delete modal for additional securtity

--- a/mototorque/templates/browse.html
+++ b/mototorque/templates/browse.html
@@ -18,11 +18,33 @@
           >Edit</a
         >
         <a
+          href="#delete_modal"
+          class="btn waves-effect waves-red delete_link modal-trigger"
+          >Delete</a
+        >
+        <!-- <a
           href="{{ url_for('delete_word', word_id=word.id) }}"
           class="btn waves-effect waves-red delete_link"
           >Delete</a
-        >
+        > -->
       </div>
+    </div>
+  </div>
+  <!-- Modal for delete button -->
+  <div id="delete_modal" class="modal">
+    <div class="modal-content">
+      <h4>Warning!</h4>
+      <p>Are you sure you want to delete this?</p>
+    </div>
+    <div class="modal-footer">
+      <a
+        href=" {{ url_for('delete_word', word_id=word.id) }}"
+        class="btn waves-effect waves-red delete_link"
+        >Yes</a
+      >
+      <a href="#!" class="waves-effect waves-green btn-flat modal-close"
+        >Cancel</a
+      >
     </div>
   </div>
   {% endfor %}
