styled modal close button

--- a/mototorque/templates/browse.html
+++ b/mototorque/templates/browse.html
@@ -42,7 +42,7 @@
         class="btn waves-effect waves-red delete_link"
         >Yes</a
       >
-      <a href="#!" class="waves-effect waves-green btn-flat modal-close"
+      <a href="#!" class="waves-effect waves btn modal-close edit-link"
         >Cancel</a
       >
     </div>
