created signup template and correct errors in enter_user

--- a/mototorque/templates/enter_user.html
+++ b/mototorque/templates/enter_user.html
@@ -4,7 +4,7 @@
   <div class="col s12">
     <div class="card blue-grey darken-3">
       <div class="card-content white-text">
-        <span class="card-title">Enter your details to log in.</span>
+        <span class="card-title">Enter your details to log in!</span>
         <div class="row">
           <form class="col s12" method="POST">
             <div class="row">
@@ -13,7 +13,7 @@
                   id="username"
                   name="username"
                   type="text"
-                  maxlength="100"
+                  maxlength="50"
                   class="validate"
                   required
                 />
@@ -26,7 +26,7 @@
                   id="password"
                   name="password"
                   type="password"
-                  maxlength="200"
+                  maxlength="128"
                   class="validate"
                   required
                 />
