--- a/mototorque/templates/enter_user.html
+++ b/mototorque/templates/enter_user.html
@@ -23,14 +23,14 @@
             <div class="row">
               <div class="input-field col s12">
                 <input
-                  id="password"
-                  name="password"
+                  id="password_hash"
+                  name="password_hash"
                   type="password"
                   maxlength="128"
                   class="validate"
                   required
                 />
-                <label for="password">Password</label>
+                <label for="password_hash">Password</label>
               </div>
             </div>
             <div class="card-action">
