--- a/mototorque/templates/signup.html
+++ b/mototorque/templates/signup.html
@@ -6,7 +6,7 @@
       <div class="card-content white-text">
         <span class="card-title">Enter your details to sign up!</span>
         <div class="row">
-          <form class="col s12" method="POST" action="#">
+          <form class="col s12" method="POST" action="{{ url_for('signup') }}">
             <div class="row">
               <div class="input-field col s12">
                 <input
