--- a/mototorque/templates/signup.html
+++ b/mototorque/templates/signup.html
@@ -36,14 +36,14 @@
             <div class="row">
               <div class="input-field col s12">
                 <input
-                  id="password"
-                  name="password"
+                  id="password_hash"
+                  name="password_hash"
                   type="password"
                   maxlength="128"
                   class="validate"
                   required
                 />
-                <label for="password">Enter a password</label>
+                <label for="password_hash">Enter a password</label>
               </div>
             </div>
             <div class="card-action">
@@ -62,5 +62,16 @@
     </div>
   </div>
 </div>
+
+<table class="table table-hover table-bordered table-striped">
+  {% for our_user in our_users %}
+  <tr>
+    <td>
+      {{ our_user.id }} - {{ our_user.username }} - {{ our_user.email }} - {{
+      our_user.password_hash }}
+    </td>
+  </tr>
+  {% endfor %}
+</table>
 
 {% endblock %}
