--- a/mototorque/templates/signup.html
+++ b/mototorque/templates/signup.html
@@ -6,7 +6,7 @@
       <div class="card-content white-text">
         <span class="card-title">Enter your details to sign up!</span>
         <div class="row">
-          <form class="col s12" method="POST" action="{{ url_for('signup') }}">
+          <form class="col s12" method="POST" action="{{ url_for('add_user') }}">
             <div class="row">
               <div class="input-field col s12">
                 <input
@@ -64,13 +64,12 @@
 </div>
 
 <div>
-  {% for our_user in our_users %}
+
   <p>{{ our_user.id }}</p>
   <p>{{ our_user.username }}</p>
   <p>{{ our_user.email }}</p>
   <p>{{ our_user.password_hash }}</p>
 
-  {% endfor %}
 </div>
 
 {% endblock %}
