added login required to add word

--- a/mototorque/templates/base.html
+++ b/mototorque/templates/base.html
@@ -51,7 +51,7 @@
                 >Add +</a
               >
             </li>
-            <li><a href="{{ url_for('enter_user') }}">Login</a></li>
+            <li><a href="{{ url_for('signin') }}">Login</a></li>
             <li><a href="#">Logout</a></li>
             <li>
               <a
@@ -79,7 +79,7 @@
             >Add +</a
           >
         </li>
-        <li><a href="{{ url_for('enter_user') }}">Login</a></li>
+        <li><a href="{{ url_for('signin') }}">Login</a></li>
         <li><a href="#">Logout</a></li>
         <li>
           <a
