--- a/mototorque/templates/signin.html
+++ b/mototorque/templates/signin.html
@@ -6,7 +6,7 @@
       <div class="card-content white-text">
         <span class="card-title">Enter your details to log in!</span>
         <div class="row">
-          <form class="col s12" method="POST">
+          <form class="col s12" method="POST" action="{{ url_for('signin') }}">
             <div class="row">
               <div class="input-field col s12">
                 <input
