--- a/mototorque/templates/base.html
+++ b/mototorque/templates/base.html
@@ -52,7 +52,7 @@
               >
             </li>
             <li><a href="{{ url_for('signin') }}">Login</a></li>
-            <li><a href="#">Logout</a></li>
+            <li><a href="{{ url_for('signout') }}">Logout</a></li>
             <li>
               <a
                 href="{{ url_for('signup') }}"
