--- a/mototorque/templates/browse.html
+++ b/mototorque/templates/browse.html
@@ -9,7 +9,8 @@
         <span class="card-title">{{ word.word_phrase }}</span>
         <p>{{ word.definition }}</p>
         <br />
-        <p><em>{{ word.example }}</em></p>
+        <p><em>{{ word.example }}</em></p><br />
+        <!-- <p>{{ word.poster.name }}</p> -->
       </div>
       <div class="card-action">
         <a
