added delete user, browse all, and migrated db after removing entries

--- a/mototorque/templates/base.html
+++ b/mototorque/templates/base.html
@@ -145,6 +145,7 @@
             <td><a href="{{url_for('browse', type='7')}}">7</a></td>
             <td><a href="{{url_for('browse', type='8')}}">8</a></td>
             <td><a href="{{url_for('browse', type='9')}}">9</a></td>
+            <td><a href="{{url_for('browse', type='all')}}">All</a></td>
           </tr>
         </table>
       </div>
