--- a/mototorque/templates/add.html
+++ b/mototorque/templates/add.html
@@ -54,7 +54,7 @@
               <button
                 class="btn waves-effect waves-light"
                 type="submit"
-                name="action"
+                name="add_word"
               >
                 Submit
                 <i class="fa-solid fa-paper-plane"></i>
