--- a/mototorque/templates/browse.html
+++ b/mototorque/templates/browse.html
@@ -11,7 +11,7 @@
         <br />
         <p><em>{{ word.example }}</em></p>
         <br />
-        <!-- <p>{{ word.poster.name }}</p> -->
+        <p>{{ word.poster.username }}</p>
       </div>
       <div class="card-action">
         <a
