--- a/mototorque/templates/signin.html
+++ b/mototorque/templates/signin.html
@@ -37,7 +37,7 @@
               <button
                 class="btn waves-effect waves-light"
                 type="submit"
-                name="action"
+                name="signin"
               >
                 Login
                 <i class="fa-solid fa-paper-plane"></i>
