--- a/mototorque/templates/signin.html
+++ b/mototorque/templates/signin.html
@@ -51,8 +51,14 @@
               </button>
             </div>
           </form>
+          {% endif %}
+          <div>
+            <p>
+              If you do not have an account please sign up
+              <a href="{{ url_for('signup') }}">here</a>
+            </p>
+          </div>
         </div>
-        {% endif %}
       </div>
     </div>
   </div>
