--- a/mototorque/static/css/style.css
+++ b/mototorque/static/css/style.css
@@ -52,3 +52,13 @@ input {
 .card .card-title {
     font-weight: 600;
 }
+
+/* Media queries */
+
+@media only screen and (max-width: 768px) {
+
+    /* For mobile phones: */
+    table {
+        font-size: 12px;
+    }
+}
