--- a/mototorque/templates/admin.html
+++ b/mototorque/templates/admin.html
@@ -23,7 +23,7 @@
               <td>
                 <a
                   href=" {{ url_for('delete_user', user_id=our_user.id) }}"
-                  class="btn waves-effect waves-red delete_link"
+                  class="btn-small waves-effect waves-red delete_link"
                   >Delete</a
                 >
               </td>
