--- a/mototorque/templates/index.html
+++ b/mototorque/templates/index.html
@@ -6,7 +6,7 @@
       <div class="card-content white-text">
         <span class="card-title">Welcome!</span>
         <p>
-          Welcome to Moto Torque! An online lexicon for motorcycle words and
+          Welcome to Moto Torque! An online dicitonary for motorcycle words and
           phrases added and defined by you. Feel free to browse the ever growing
           collection. <br /><br />
           If you would like to contribute please sign up!
