cited reference for media query

--- a/mototorque/static/css/style.css
+++ b/mototorque/static/css/style.css
@@ -55,6 +55,7 @@ input {
 
 /* Media queries */
 
+/* Basis for query taken from https: //www.w3schools.com/css/css_rwd_mediaqueries.asp */
 @media only screen and (max-width: 768px) {
 
     /* For mobile phones: */
