--- a/mototorque/templates/sorry2.html
+++ b/mototorque/templates/sorry2.html
@@ -5,8 +5,13 @@
     <div class="card blue-grey darken-3">
       <div class="card-content white-text">
         <span class="card-title"
-          >Your word or phrase has been added successfully</span
+          >Sorry, an account has already been made with this email
+          address.</span
         >
+        <p>
+          If you have forgotten your username or password please contact an
+          administrator
+        </p>
       </div>
     </div>
   </div>
