Added aria label to mobile sidenav trigger & meta description

--- a/mototorque/templates/base.html
+++ b/mototorque/templates/base.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Online, user created, dicitonary for motorcycling words and phrases."
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
@@ -33,7 +37,11 @@
           <a href="{{ url_for('home') }}" class="brand-logo left"
             ><i class="fa-solid fa-motorcycle"></i>Moto Torque</a
           >
-          <a href="#" data-target="mobile-demo" class="sidenav-trigger right"
+          <a
+            href="#"
+            data-target="mobile-demo"
+            class="sidenav-trigger right"
+            aria-label="Open side navigation to left of screen"
             ><i class="fa-solid fa-bars"></i
           ></a>
           <ul class="right hide-on-med-and-down">
