--- a/mototorque/templates/base.html
+++ b/mototorque/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Online, user created, dicitonary for motorcycling words and phrases."
+      content="Online, user created, dictionary for motorcycling words and phrases."
     />
     <link
       rel="stylesheet"
